Move Front-End code to another file. (*.razor.cs) Move Information Log Level to Debug Level.

--- a/src/BlazorPatient/Pages/MudNotes.razor
+++ b/src/BlazorPatient/Pages/MudNotes.razor
@@ -29,8 +29,10 @@
     <MudCard Elevation="25">
         <MudCardHeader>
             <CardHeaderContent>
-                <MudProgressCircular Color="Color.Primary" Size="Size.Medium" Indeterminate="true" />
-                <MudText Variant="Variant.Text" Typo="Typo.h6">Loading ...</MudText>
+                <MudText Align="Align.Center" Variant="Variant.Text" Typo="Typo.h5">Loading ...</MudText>
+                <br />
+                <MudProgressLinear Color="Color.Primary" Indeterminate="true" />
+                <br />
             </CardHeaderContent>
         </MudCardHeader>
     </MudCard>
@@ -41,6 +43,7 @@ else if (_notes.Count is 0)
         <MudCardHeader>
             <CardHeaderContent>
                 <MudText Variant="Variant.Text" Typo="Typo.h6">No patient notes/history found.</MudText>
+                <br/>
             </CardHeaderContent>
         </MudCardHeader>
     </MudCard>
@@ -91,117 +94,4 @@ else
 @code {
     [Parameter]
     public int PatientId { get; set; }
-
-    private List<NoteModel> _notes;
-    private NoteModel _note = new();
-    private List<PatientModel> _patients = new();
-    private PatientModel _patient = new();
-    private string _searchString = "";
-    private string _cardHeaderString = "Add a note :";
-    private int _age = 0;
-    private string _riskLevel;
-    private string _riskLevelIcon;
-    private Color _riskLevelColor;
-
-    protected override async Task OnInitializedAsync()
-    {
-        _patients = await PatientService.Get();
-        if (_patients.All(x => x.Id != PatientId))
-        {
-            SnackBar.Add($"Patient n° {PatientId} not found.", Severity.Error);
-            NavigationManager.NavigateTo("/Patients");
-        }
-
-        _notes = await NoteService.GetByPatientId(PatientId);
-        _patient = _patients.Find(x => x.Id == PatientId);
-        _age = GetAge();
-        var assessment = await AssessmentService.GetByPatientId(PatientId);
-        _riskLevel = assessment.RiskLevel.ToString();
-        switch (assessment.RiskLevel)
-        {
-            case RiskLevel.None:
-                _riskLevelIcon = Icons.Material.Filled.CheckCircle;
-                _riskLevelColor = Color.Tertiary;
-                break;
-            case RiskLevel.Borderline:
-                _riskLevelIcon = Icons.Material.Filled.BrokenImage;
-                _riskLevelColor = Color.Dark;
-                break;
-            case RiskLevel.EarlyOnset:
-                _riskLevelIcon = Icons.Material.Filled.Warning;
-                _riskLevelColor = Color.Warning;
-                break;
-            case RiskLevel.InDanger:
-                _riskLevelIcon = Icons.Material.Filled.Dangerous;
-                _riskLevelColor = Color.Error;
-                break;
-            default:
-                throw new ArgumentOutOfRangeException();
-        }
-    }
-
-    private bool SearchNote(NoteModel note)
-    {
-        if (string.IsNullOrWhiteSpace(_searchString)) return true;
-        return note.Id.Contains(_searchString, StringComparison.OrdinalIgnoreCase)
-               || note.PatientId.Equals(int.Parse(_searchString))
-               || note.Message.Contains(_searchString, StringComparison.OrdinalIgnoreCase);
-    }
-
-    private async Task SaveNote()
-    {
-        _cardHeaderString = "Add a note :";
-        _note.PatientId = PatientId;
-        int result = await NoteService.Save(_note);
-        var cacheNote = _note;
-        _note = new NoteModel();
-        switch (result)
-        {
-            case 0:
-                SnackBar.Add("Something went wrong.", Severity.Error);
-                SnackBar.Add(NoteService.ErrorMessage);
-                _note = cacheNote;
-                break;
-            case 1:
-                SnackBar.Add("Note Saved.", Severity.Success);
-                break;
-            case 2:
-                SnackBar.Add("Note Updated.", Severity.Success);
-                break;
-            default:
-                SnackBar.Add("Something went wrong.", Severity.Error);
-                break;
-        }
-        _notes = await NoteService.GetByPatientId(PatientId);
-    }
-
-
-    private void EditNote(string id)
-    {
-        _cardHeaderString = "Edit a note :";
-        _note = _notes.FirstOrDefault(p => p.Id == id);
-    }
-
-    private static string GetPatientDate(DateTime? dateOfBirth)
-    {
-        return dateOfBirth != null ? dateOfBirth.Value.ToShortDateString() : "";
-    }
-
-    private int GetAge()
-    {
-        if (_patient.DateOfBirth == null)
-        {
-            return 0;
-        }
-
-        var today = DateTime.Today;
-        int age = today.Year - _patient.DateOfBirth.Value.Year;
-
-        // Go back to the year in which the person was born in case of a leap year
-        if (_patient.DateOfBirth.Value.Date > today.AddYears(-age))
-        {
-            age--;
-        }
-        return age;
-    }
 }
