--- a/src/BlazorPatient/Pages/MudPatient.razor
+++ b/src/BlazorPatient/Pages/MudPatient.razor
@@ -9,8 +9,10 @@
     <MudCard Elevation="25">
         <MudCardHeader>
             <CardHeaderContent>
-                <MudProgressCircular Color="Color.Primary" Size="Size.Medium" Indeterminate="true" />
-                <MudText Variant="Variant.Text" Typo="Typo.h6">Loading ...</MudText>
+                <MudText Align="Align.Center" Variant="Variant.Text" Typo="Typo.h5">Loading ...</MudText>
+                <br/>
+                <MudProgressLinear Color="Color.Primary" Indeterminate="true" />
+                <br/>
             </CardHeaderContent>
         </MudCardHeader>
     </MudCard>
@@ -39,7 +41,7 @@ else
             </MudTextField>
         </ToolBarContent>
         <HeaderContent>
-            <MudTh>Assessment</MudTh>
+            @*<MudTh>Assessment</MudTh>*@
             <MudTh>Given Name</MudTh>
             <MudTh>Family Name</MudTh>
             <MudTh>Date Of Birth</MudTh>
@@ -49,7 +51,7 @@ else
             <MudTh>Actions</MudTh>
         </HeaderContent>
         <RowTemplate>
-            <MudTd><MudChip Icon="@GetAssessmentIcon(context)" Color="@GetAssessmentColor(context)" Variant="Variant.Filled">@GetAssessmentText(context)</MudChip></MudTd>
+            @*<MudTd><MudChip Icon="@GetAssessmentIcon(context)" Color="@GetAssessmentColor(context)" Variant="Variant.Filled">@GetAssessmentText(context)</MudChip></MudTd>*@
             <MudTd>@context.GivenName</MudTd>
             <MudTd>@context.FamilyName</MudTd>
             <MudTd>@GetPatientDate(context.DateOfBirth)</MudTd>
@@ -93,107 +95,3 @@ else
         <MudButton Variant="Variant.Filled" Color="Color.Info" OnClick="SavePatient">Save Patient</MudButton>
     </MudCardContent>
 </MudCard>
-
-@code{
-    private string _searchString;
-    private string _cardHeaderString = "Add a patient :";
-
-    private PatientModel _patient = new();
-    private PatientModel _cachePatient = new();
-    private List<PatientModel> _patients;
-    private readonly List<AssessmentModel> _assessments = new();
-
-    protected override async Task OnInitializedAsync()
-    {
-        _patients = await PatientService.Get();
-        if (PatientService.ErrorMessage != "")
-        {
-            SnackBar.Add(PatientService.ErrorMessage, Severity.Error);
-        }
-        foreach (var patientModel in _patients)
-        {
-            var assessment = await AssessmentService.GetByPatientId(patientModel.Id);
-            _assessments.Add(assessment);
-        }
-    }
-
-
-    private string GetAssessmentIcon(PatientModel patientModel)
-    {
-        var riskLevel = _assessments.Find(p => p.FamilyName == patientModel.FamilyName)?.RiskLevel;
-        return riskLevel switch
-        {
-            RiskLevel.None => Icons.Material.Filled.CheckCircle,
-            RiskLevel.Borderline => Icons.Material.Filled.BrokenImage,
-            RiskLevel.EarlyOnset => Icons.Material.Filled.Warning,
-            RiskLevel.InDanger => Icons.Material.Filled.Dangerous,
-            _ => throw new ArgumentOutOfRangeException()
-        };
-    }
-    private Color GetAssessmentColor(PatientModel patientModel)
-    {
-        var riskLevel = _assessments.Find(p => p.FamilyName == patientModel.FamilyName)?.RiskLevel;
-        return riskLevel switch
-        {
-            RiskLevel.None => Color.Tertiary,
-            RiskLevel.Borderline => Color.Dark,
-            RiskLevel.EarlyOnset => Color.Warning,
-            RiskLevel.InDanger => Color.Error,
-            _ => throw new ArgumentOutOfRangeException()
-        };
-    }
-    private string GetAssessmentText(PatientModel patientModel)
-    {
-        return _assessments.Find(p => p.FamilyName == patientModel.FamilyName)?.RiskLevel.ToString();
-    }
-
-    private static string GetPatientDate(DateTime? dateOfBirth)
-    {
-        return dateOfBirth != null ? dateOfBirth.Value.ToShortDateString() : "";
-    }
-
-    private bool SearchPatient(PatientModel patientParam)
-    {
-        if (string.IsNullOrWhiteSpace(_searchString)) return true;
-        return patientParam.GivenName.Contains(_searchString, StringComparison.OrdinalIgnoreCase)
-               || patientParam.FamilyName.Contains(_searchString, StringComparison.OrdinalIgnoreCase)
-               || patientParam.PhoneNumber.Contains(_searchString, StringComparison.OrdinalIgnoreCase);
-    }
-
-    private async Task GetPatients()
-    {
-        _patients = await PatientService.Get();
-    }
-    private async Task SavePatient()
-    {
-        _cardHeaderString = "Add a patient :";
-        int result = await PatientService.Save(_patient);
-        _patient = new PatientModel();
-        switch (result)
-        {
-            case 0:
-                SnackBar.Add("Something went wrong.", Severity.Error);
-                SnackBar.Add(PatientService.ErrorMessage);
-                _patient = _cachePatient;
-                break;
-            case 1:
-                SnackBar.Add("Patient Saved.", Severity.Success);
-                break;
-            case 2:
-                SnackBar.Add("Patient Updated.", Severity.Success);
-                break;
-        }
-        await GetPatients();
-    }
-    private void EditPatient(int id)
-    {
-        _cardHeaderString = "Edit a patient :";
-        _patient = _patients.FirstOrDefault(p => p.Id == id);
-        _cachePatient = _patient;
-    }
-
-    private void OnRowClicked(TableRowClickEventArgs<PatientModel> args)
-    {
-        NavigationManager.NavigateTo($"/Patients/{args.Item.Id}");
-    }
-}
