--- a/src/BlazorPatient/Pages/_Host.cshtml
+++ b/src/BlazorPatient/Pages/_Host.cshtml
@@ -33,5 +33,7 @@
 
     <script src="_framework/blazor.server.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/custom.js"></script>
 </body>
 </html>
